--- a/sass/pages/_alternative.scss
+++ b/sass/pages/_alternative.scss
@@ -34,7 +34,7 @@
         position: absolute;
         width: 840px;
         height: 170px;
-        background-color: $color-dark-primary;
+        background-color: $color-dark-secondary;
         left: 0;
         top: 0;
         z-index: -1;
