--- a/sass/pages/_weekend.scss
+++ b/sass/pages/_weekend.scss
@@ -1,21 +1,39 @@
 .weekend-content {
   &__banner {
-    min-height: 390px;
-    background-image: url('../../assets/images/bg-weekend-notes.png');
-    background-size: cover;
-    background-position: center;
+    position: relative;
+    min-height: 290px;
+    height: 290px;
+
+    @include media-breakpoint-up(lg) {
+      min-height: 390px;
+      height: 390px;
+    }
 
     @include media-breakpoint-up(fhd) {
       min-height: 485px;
+      height: 485px;
     }
 
     @include media-breakpoint-up(tk) {
       min-height: 780px;
+      height: 780px;
     }
   }
 
+  &__banner-image {
+    position: relative;
+    z-index: 0
+  }
+
+  &__banner-mask {
+    @include pos-abs-cover;
+    z-index: 1;
+    left: auto;
+    right: 0;
+    background-color: $color-dark-secondary;
+  }
+
   &__row {
-    margin-top: -170px;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -23,47 +41,38 @@
 
     @include media-breakpoint-up(lg) {
       flex-direction: row;
+      margin-top: -170px;
     }
   }
 
   &__left-panel {
     width: 100%;
-    height: 600px;
-    max-height: 600px;
-    background-color: $color-dark-primary;
+    background-color: $color-dark-secondary;
     position: relative;
       overflow-x: hidden;
       overflow-y: hidden;
 
-    & > img {
-      width: 500px;
-      margin-left: -90px;
-    }
-
     @include media-breakpoint-up(lg) {
-      width: 500px;
+      height: 600px;
+      max-height: 600px;
+      width: 245px;
+      min-width: 245px;
       overflow-x: initial;
       overflow-y: initial;
     }
 
     @include media-breakpoint-up(fhd) {
-      width: 750px;
+      width: 368px;
+      min-width: 368px;
       height: 900px;
       max-height: 900px;
-
-      & > img {
-        width: 750px;
-      }
     }
 
     @include media-breakpoint-up(tk) {
-      width: 1000px;
+      width: 490px;
+      min-width: 490px;
       height: 1200px;
       max-height: 1200px;
-
-      & > img {
-        width: 1000px;
-      }
     }
   }
 
@@ -72,8 +81,36 @@
     display: none;
     text-decoration: none;
 
+
     @include media-breakpoint-up(lg) {
-      width: calc(100% - 590px);
+      max-width: 1400px;
+      margin-left: 100px;
+    }
+
+    @include media-breakpoint-up(fhd) {
+      max-width: 2100px;
+      margin-left: 150px;
+    }
+
+    @include media-breakpoint-up(tk) {
+      max-width: 2800px;
+      margin-left: 200px;
+    }
+
+    &--article {
+      margin: 100px auto 0;
+      padding: 0 15px;
+      padding-bottom: 150px;
+    
+      @include media-breakpoint-up(fhd) {
+        padding: 0 22px;
+        padding-bottom: 225px;
+      }
+    
+      @include media-breakpoint-up(tk) {
+        padding: 0 30px;
+        padding-bottom: 300px;
+      }
     }
 
     &--active {
@@ -82,13 +119,31 @@
   }
 
   &__left-panel-links {
-    position: absolute;
+    position: relative;
     top: 0px;
     right: 0px;
     height: 100%;
     align-items: flex-end;
     display: flex;
     flex-direction: column;
+    padding: 40px 0;
+
+    & > :nth-child(1) {
+      display: none;
+    }
+
+    & > :nth-child(2) {
+      margin-top: 0;
+    }
+
+    @include media-breakpoint-up(lg) {
+      position: absolute;
+      padding: 0;
+
+      & > :nth-child(1) {
+        display: block;
+      }
+    }
   }
 
   &__selector {
@@ -103,15 +158,22 @@
     cursor: pointer;
     color: $color-white;
     white-space: nowrap;
+    margin-top: 60px;
+
+    @include media-breakpoint-up(lg) {
+      margin-top: 80px !important;
+    }
 
     @include media-breakpoint-up(fhd) {
       font-size: 21px;
       letter-spacing: 2.1px;
+      margin-top: 120px !important;
     }
 
     @include media-breakpoint-up(tk) {
       font-size: 28px;
       letter-spacing: 3.2px;
+      margin-top: 160px !important;
     }
 
     & > span {
@@ -143,67 +205,12 @@
     }
 
     &--title {
-      margin-top: 120px;
+      margin-top: 120px !important;
       .alternative-banner__selector-button {
         background-color: $color-dark-primary;
         &::after {
           left: 32px !important;
         }
-      }
-    }
-    &--media {
-      margin-top: 80px;
-
-      @include media-breakpoint-up(fhd) {
-        margin-top: 120px;
-      }
-
-      @include media-breakpoint-up(tk) {
-        margin-top: 160px;
-      }
-    }
-    &--press {
-      margin-top: 80px;
-
-      @include media-breakpoint-up(fhd) {
-        margin-top: 120px;
-      }
-
-      @include media-breakpoint-up(tk) {
-        margin-top: 160px;
-      }
-    }
-    &--podcasts {
-      margin-top: 80px;
-
-      @include media-breakpoint-up(fhd) {
-        margin-top: 120px;
-      }
-
-      @include media-breakpoint-up(tk) {
-        margin-top: 160px;
-      }
-    }
-    &--resources {
-      margin-top: 80px;
-
-      @include media-breakpoint-up(fhd) {
-        margin-top: 120px;
-      }
-
-      @include media-breakpoint-up(tk) {
-        margin-top: 160px;
-      }
-    }
-    &--weekend {
-      margin-top: 80px;
-
-      @include media-breakpoint-up(fhd) {
-        margin-top: 120px;
-      }
-
-      @include media-breakpoint-up(tk) {
-        margin-top: 160px;
       }
     }
   }
@@ -212,7 +219,7 @@
     position: absolute;
     width: 42px;
     height: 42px;
-    background-color: $color-dark-primary;
+    background-color: $color-white;
     border-radius: 100%;
     right: -21px;
     top: 50%;
@@ -230,7 +237,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        border: 1px solid $color-primary;
+        border: 1px solid $color-secondary;
         border-radius: 100%;
         transition: border-color $digital-banner-anim-duration $digital-banner-anim-timing;
     }
@@ -243,7 +250,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      border: 1px solid $color-primary;
+      border: 1px solid $color-secondary;
       border-radius: 100%;
       transition: border-color $digital-banner-anim-duration $digital-banner-anim-timing;
     }
@@ -253,7 +260,7 @@
         position: absolute;
         width: 30px;
         height: 1px;
-        background-color: $color-primary;
+        background-color: $color-secondary;
         top: 50%;
         transform: translateY(-50%);
         left: -20px;
@@ -264,7 +271,7 @@
         position: absolute;
         width: 30px;
         height: 1px;
-        background-color: $color-primary;
+        background-color: $color-secondary;
         top: 50%;
         transform: translateY(-50%);
         left: 32px !important;
@@ -328,32 +335,22 @@
     margin: 0px;
     font-size: 80px;
     font-family: 'Ivy Mode';
-    color: $color-dark-primary;
+    color: $color-dark-secondary;
     letter-spacing: 5.4px;
-
-    @include media-breakpoint-up(lg) {
-      padding-left: 100px;
-    }
 
     @include media-breakpoint-up(fhd) {
       font-size: 120px;
       letter-spacing: 8px;
-      padding-left: 150px;
     }
     @include media-breakpoint-up(tk) {
       font-size: 120px;
       letter-spacing: 10.8px;
-      padding-left: 200px;
     }
 
     &--white {
       margin-top: 70px;
       margin-bottom: 0px;
-      color: black;
-
-      @include media-breakpoint-up(lg) {
-        color: $color-white;
-      }
+      color: $color-white;
 
       @include media-breakpoint-up(fhd) {
         margin-top: 20px;
@@ -375,20 +372,18 @@
     font-size: 16px;
 
     @include media-breakpoint-up(xl) {
-      padding-left: 100px;
-      padding-right: 70px;
     }
 
     @include media-breakpoint-up(fhd) {
       font-size: 24px;
       letter-spacing: 1.9px;
-      padding: 30px 105px 30px 150px;
+      padding: 30px 0;
     }
 
     @include media-breakpoint-up(tk) {
       font-size: 32px;
       letter-spacing: 2.5px;
-      padding: 40px 140px 40px 200px;
+      padding: 40px 0;
     }
   }
 
@@ -521,41 +516,30 @@
   }
   
   &__weekend-row {
-    padding-left: 20px;
-    padding-right: 0px;
+    padding: 0 20px;
     margin-top: 0px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+
+    @include media-breakpoint-up(sm) {
+      grid-template-columns: repeat(2, 1fr);
+    }
 
     @include media-breakpoint-up(lg) {
-      flex-direction: row;
-      padding-left: 100px;
+      grid-gap: 30px;
     }
 
-    @include media-breakpoint-up(fhd) {
-      padding-left: 150px;
+    @include media-breakpoint-up(xl) {
+      grid-template-columns: repeat(4, 1fr);
     }
 
-    @include media-breakpoint-up(tk) {
-      padding-left: 200px;
-    }
-
-    &--vertical {
-      flex-direction: column;
-      margin-top: -180px;
-      .weekend-content__weekend-column {
-        margin-top: 50px !important;
-        width: 80% !important;
-        margin-left: 10% !important;
-        text-decoration: none;
-      }
+    @include media-breakpoint-up(xi) {
+      grid-gap: 80px;
     }
   }
 
   &__weekend-column {
-    min-width: calc(100% / 3);
-    padding: 0px 30px 0px 0px;
     font-size: 16px;
     font-weight: bold;
     letter-spacing: 1.28px;
@@ -566,7 +550,6 @@
     margin-bottom: 0;
     width: 100%;
     @include media-breakpoint-up(lg) {
-      width: calc(100% / 3);
       margin-top: 90px;
     }
     img {
@@ -615,5 +598,156 @@
 
   &__card-text {
     font-weight: normal;
+  }
+}
+
+.weekend-article {
+  
+  &__banner {
+    background-color: $color-white;
+    padding: 60px 0 0;
+    overflow: hidden;
+
+    @include media-breakpoint-up(lg) {
+      padding: 100px 0 80px;
+    }
+
+    @include media-breakpoint-up(xi) {
+      padding: 170px 0 80px;
+    }
+
+    @include media-breakpoint-up(fhd) {
+      padding: 220px 0 120px;
+    }
+
+    @include media-breakpoint-up(tk) {
+      padding: 300px 0 160px;
+    }
+  }
+
+  &__banner-mask {
+    @include pos-abs-cover;
+    z-index: 1;
+    left: auto;
+    right: 0;
+    background-color: $color-dark-secondary;
+  }
+
+  &__banner-container {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
+    z-index: 0;
+
+    @include media-breakpoint-up(lg) {
+      grid-template-columns: 1fr 500px;
+      height: 750px;
+    }
+
+    @include media-breakpoint-up(xi) {
+      grid-template-columns: 1fr 750px;
+      height: 750px;
+    }
+
+    @include media-breakpoint-up(fhd) {
+      grid-template-columns: 1fr 1125px;
+      height: 1125px;
+    } 
+
+    @include media-breakpoint-up(tk) {
+      grid-template-columns: 1fr 1500px;
+      height: 1500px;
+    } 
+  }
+
+  &__image-container {
+    position: relative;
+
+    &::before {
+      content: "";
+      @include pos-abs-cover;
+      background-color: $color-dark-secondary;
+      top: -300px;
+      z-index: -1;
+    }
+  }
+
+  &__right-panel {
+    position: relative;
+    background-color: $color-dark-secondary;
+    z-index: 1;
+
+    &::after {
+      content: "";
+      position: absolute;
+      height: 80px;
+      width: 100%;
+      bottom: -80px;
+      left: 0;
+      background-color: $color-dark-secondary;
+
+      @include media-breakpoint-up(fhd) {
+        height: 120px;
+        bottom: -120px;
+      }
+
+      @include media-breakpoint-up(tk) {
+        height: 160px;
+        bottom: -160px;
+      }
+    }
+  }
+
+  &__right-panel > .weekend-content__left-panel-links {
+    position: relative;
+    height: min-content;
+
+    @include media-breakpoint-up(lg) {
+      position: absolute;
+      right: auto;
+      top: auto;
+      bottom: 60px;
+      left: -150px;
+    }
+
+    @include media-breakpoint-up(xi) {
+      left: -185px;
+    }
+
+    @include media-breakpoint-up(fhd) {
+      left: -240px;
+      bottom: 90px;
+    }
+
+    @include media-breakpoint-up(tk) {
+      left: -330px;
+      bottom: 120px;
+    }
+  }
+
+  &__right-panel > .weekend-content__title-active {
+
+    @include media-breakpoint-up(lg) {
+      padding-left: 60px;
+      margin-top: 155px;
+    }
+
+    @include media-breakpoint-up(xi) {
+      padding-left: 100px;
+    }
+
+    @include media-breakpoint-up(fhd) {
+      padding-left: 140px;
+      margin-top: 232px;
+    }
+
+    @include media-breakpoint-up(tk) {
+      padding-left: 150px;
+      margin-top: 310px;
+    }
+  }
+
+  &__right-panel .weekend-content__selector-button {
+    background-color: $color-dark-secondary;
   }
 }
