--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -73,6 +73,7 @@
 
         @include media-breakpoint-up(1600) {
             height: 720px;
+            margin-left: 55px;
         }
 
         @include media-breakpoint-up(fhd) {
