--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -73,7 +73,14 @@
 
         @include media-breakpoint-up(1600) {
             height: 720px;
+        }
+
+        @include media-breakpoint-up(1680){
             margin-left: 55px;
+        }
+
+        @include media-breakpoint-up(1685){
+            margin-left: auto;
         }
 
         @include media-breakpoint-up(fhd) {
