--- a/css/style.css
+++ b/css/style.css
@@ -1864,13 +1864,12 @@ body {
     font-family: 'Optima';
     font-size: 14px;
     letter-spacing: 1.28px;
-    line-height: 1.1;
+    line-height: 1.5625;
     color: #09102E;
     font-weight: 400;
     margin: 0 50px; }
     @media only screen and (min-width: 576px) {
       .home-section__text {
-        line-height: 1.5625;
         font-size: 22px;
         margin: 0 90px; } }
     @media only screen and (min-width: 768px) {
@@ -4608,9 +4607,7 @@ body {
     width: 215px;
     height: 276px;
     margin: 0 12px;
-    transition: width .2s ease-in,
- height .2s ease-in,
- margin .2s ease-in; }
+    transition: width .2s ease-in, height .2s ease-in, margin .2s ease-in; }
     @media screen and (max-width: 382px) {
       .about-banner__carousel-item {
         width: 40px;
@@ -4640,7 +4637,7 @@ body {
       margin-left: 15px;
       width: 52px !important; } }
   .about-banner .slick-current {
-    height: 420px;
+    height: 370px;
     width: 250px !important;
     margin: 0 15px;
     opacity: 1; }
