--- a/css/style.css
+++ b/css/style.css
@@ -1764,7 +1764,8 @@ body {
       .home-section__secondary {
         justify-content: flex-start;
         margin-top: 40px;
-        padding-left: 140px; } }
+        padding-left: 140px;
+        padding-bottom: 48px; } }
     @media only screen and (min-width: 1200px) {
       .home-section__secondary {
         grid-row: unset;
